--- a/app/src/main/res/layout/fragment_kcal.xml
+++ b/app/src/main/res/layout/fragment_kcal.xml
@@ -7,15 +7,28 @@
     android:background="@color/colorBg">
 
     <!-- TODO: Update blank fragment layout -->
-    <AutoCompleteTextView
-        android:id="@+id/autoCompleteTextView1"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:hint="ค้นหา"
-        android:ems="10" />
+        android:orientation="horizontal"
+        >
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView1"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="8"
+            android:hint="ค้นหา"
+            android:ems="10" />
+        <ImageButton
+            android:id="@+id/btnSearch"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/search"/>
+
+    </LinearLayout>
+
 
     <ListView
         android:id="@+id/listview"
