--- a/app/src/main/res/layout/facebook_login.xml
+++ b/app/src/main/res/layout/facebook_login.xml
@@ -6,9 +6,12 @@
 
     <ImageView
         android:id="@+id/profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:layout_above="@+id/info"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="31dp" />
 
     <TextView
         android:layout_width="wrap_content"
