--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,29 +7,25 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".BodyMassIndexAC">
+    tools:context=".BodyMassIndexAC"
+    android:orientation="vertical"
+    >
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:text="Body Mass Index"
         android:id="@+id/textView" />
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="คำนวณ"
-        android:id="@+id/submit"
-        android:layout_marginTop="65dp"
-        android:layout_below="@+id/EditText02"
-        android:layout_centerHorizontal="true" />
+
 
     <EditText
         android:id="@+id/EditText01"
         android:gravity="center"
         android:hint="น้ำหนัก (กิโลกรัม)"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:editable="false"
         android:layout_marginTop="49dp"
@@ -41,34 +37,44 @@
         android:id="@+id/EditText02"
         android:gravity="center"
         android:hint="ส่วนสูง (เซนติเมตร)"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:editable="false"
         android:inputType="number"
         android:layout_below="@+id/EditText01"
         android:layout_marginTop="48dp" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="คำนวณ"
+        android:id="@+id/submit"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/EditText02"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/EditText03"
         android:gravity="center"
         android:textColor="#000"
         android:textSize="30dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:editable="false"
         android:inputType="number"
         android:layout_below="@+id/submit"
-        android:layout_marginTop="69dp"/>
+        android:layout_marginTop="2dp"/>
 
     <TextView
         android:id="@+id/EditText04"
         android:gravity="center"
         android:textColor="#000"
         android:textSize="20dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:editable="false"
         android:inputType="number"
         android:layout_below="@+id/EditText03"
-        android:layout_marginTop="45dp" />
-</RelativeLayout>
+        android:layout_marginTop="2dp" />
+</LinearLayout>
