--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBg">#f7f7f7</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorCard">#cab4b4b4</color>
 </resources>
