--- a/app/src/main/res/drawable/card_state_pressed.xml
+++ b/app/src/main/res/drawable/card_state_pressed.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/colorCardClickShadow" />
             <corners android:radius="2dp" />
         </shape>
     </item>
@@ -13,7 +13,7 @@
         android:right="0dp"
         android:top="0dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorCard" />
+            <solid android:color="@color/colorCardClick" />
             <corners android:radius="2dp" />
         </shape>
     </item>
