--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff8b2d</color>
-    <color name="colorPrimaryDark">#c96d23</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#64ACC5</color>
+    <color name="colorPrimaryDark">#FE881E</color>
+    <color name="colorAccent">#679F16</color>
     <color name="colorBg">#f7f7f7</color>
     <color name="colorWhite">#ffffff</color>
-    <color name="colorCard">#cab4b4b4</color>
+    <color name="colorCardClick">#E5E5E5</color>
+    <color name="colorCardClickShadow">#FE881E</color>
 </resources>
