--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,11 +12,13 @@
     >
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="Body Mass Index"
-        android:id="@+id/textView" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="26dp"
+        android:text="คำนวณดัชนีมวลกาย"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 
 
@@ -28,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:editable="false"
-        android:layout_marginTop="49dp"
+        android:layout_marginTop="20dp"
         android:inputType="number"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true" />
@@ -77,4 +79,4 @@
         android:inputType="number"
         android:layout_below="@+id/EditText03"
         android:layout_marginTop="2dp" />
-</LinearLayout>
+</RelativeLayout>
