Check value for insert

--- a/app/src/main/res/layout/activity_insert_food.xml
+++ b/app/src/main/res/layout/activity_insert_food.xml
@@ -71,6 +71,7 @@
         android:id="@+id/EdtCal"
         android:layout_width="100dp"
         android:layout_height="60dp"
+        android:inputType="number"
         android:layout_below="@+id/cal"/>
 
     <TextView
@@ -78,6 +79,8 @@
         android:layout_height="wrap_content"
         android:text="กิโลแคลอรี่"
         android:textSize="22sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_alignTop="@+id/EdtCal"
         android:layout_toRightOf="@+id/EdtCal"/>
 
