--- a/app/src/main/res/layout/item_listview_kcal.xml
+++ b/app/src/main/res/layout/item_listview_kcal.xml
@@ -49,6 +49,14 @@
             android:textColor="#666"
             android:textSize="12dp" />
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
     </RelativeLayout>
 
 </LinearLayout>
