--- a/app/src/main/res/layout/fragment_bmr.xml
+++ b/app/src/main/res/layout/fragment_bmr.xml
@@ -14,10 +14,11 @@
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Calculate BMR"
+        android:text="คำนวณค่า BMR"
         android:textAlignment="center"
-        android:textSize="20dp" />
+        android:textSize="24dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <!--Contents-->
     <ScrollView
@@ -39,7 +40,7 @@
                 android:id="@+id/gender"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="gender"/>
+                android:text="เพศ"/>
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -48,13 +49,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="70dp"
-                    android:text="male"/>
+                    android:text="ชาย"/>
                 <RadioButton
                     android:id="@+id/radio_female"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="70dp"
-                    android:text="female"/>
+                    android:text="หญิง"/>
             </RadioGroup>
 
 
@@ -64,14 +65,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Height (cm.)"/>
+                android:text="ส่วนสูง (ซม.)"/>
             <EditText
                 android:id="@+id/edtHeight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:layout_marginLeft="70dp"
-                android:hint="168 cm."/>
+                android:hint="168"/>
 
             <!--Insert Weight-->
             <TextView
@@ -79,14 +80,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Weight (kg.)"/>
+                android:text="น้ำหนัก (กก.)"/>
             <EditText
                 android:id="@+id/edtWeight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:layout_marginLeft="70dp"
-                android:hint="48 kg."/>
+                android:hint="48"/>
 
             <!--Insert Age-->
             <TextView
@@ -94,14 +95,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:hint="Age (years)"/>
+                android:hint="อายุ (ปี)"/>
             <EditText
                 android:id="@+id/edtAge"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:layout_marginLeft="70dp"
-                android:hint="22 years"/>
+                android:hint="22"/>
 
             <!--Insert Activity-->
             <TextView
@@ -117,31 +118,31 @@
                     android:id="@+id/radActivity1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Not or very less exercise"
+                    android:text="ไม่ หรือออกกำลังกายน้อยมาก"
                     android:layout_marginLeft="70dp"/>
                 <RadioButton
                     android:id="@+id/radActivity2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="less exercise (1-3 days/week)"
+                    android:text="ออกกำลังกายน้อย (1-3 วัน/สัปดาห์)"
                     android:layout_marginLeft="70dp"/>
                 <RadioButton
                     android:id="@+id/radActivity3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Moderate exercise (3-5 days/week)"
+                    android:text="ออกกำลังกายเป็นประจำ (3-5 วัน/สัปดาห์)"
                     android:layout_marginLeft="70dp"/>
                 <RadioButton
                     android:id="@+id/radActivity4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Hard exercise (6-7 days/week)"
+                    android:text="ออกกำลังกายอย่างหนัก (6-7 วัน/สัปดาห์)"
                     android:layout_marginLeft="70dp"/>
                 <RadioButton
                     android:id="@+id/radActivity5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="very heavy exercise or sportsman"
+                    android:text="ออกกำลังกายหนักมาก หรือเป็นนักกีฬา"
                     android:layout_marginLeft="70dp"/>
             </RadioGroup>
 
