--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,8 +12,9 @@
     >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:textSize="26dp"
         android:text="คำนวณดัชนีมวลกาย"
         android:id="@+id/textView"
@@ -32,7 +33,7 @@
         android:editable="false"
         android:layout_marginTop="20dp"
         android:inputType="number"
-        android:layout_below="@+id/textView"
+
         android:layout_centerHorizontal="true" />
 
     <EditText
@@ -43,7 +44,7 @@
         android:layout_height="wrap_content"
         android:editable="false"
         android:inputType="number"
-        android:layout_below="@+id/EditText01"
+
         android:layout_marginTop="48dp" />
     <Button
         android:layout_width="match_parent"
@@ -51,7 +52,7 @@
         android:text="คำนวณ"
         android:id="@+id/submit"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/EditText02"
+
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -64,7 +65,7 @@
         android:layout_weight="1"
         android:editable="false"
         android:inputType="number"
-        android:layout_below="@+id/submit"
+
         android:layout_marginTop="2dp"/>
 
     <TextView
@@ -77,6 +78,6 @@
         android:layout_weight="1"
         android:editable="false"
         android:inputType="number"
-        android:layout_below="@+id/EditText03"
+
         android:layout_marginTop="2dp" />
-</RelativeLayout>
+</LinearLayout>
