--- a/app/src/main/res/layout/activity_insert_food.xml
+++ b/app/src/main/res/layout/activity_insert_food.xml
@@ -22,21 +22,13 @@
         />
 
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="ชื่อ"
-        android:textSize="22sp"
 
-
-         />
 
     <EditText
         android:id="@+id/EdtName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="ชื่อ"
         />
 <LinearLayout
     android:layout_width="match_parent"
